--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "marked": "^0.3.17",
+    "node-sass": "^4.7.2",
+    "sass-loader": "^6.0.7",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
